# AutonomousRobot

./: .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
database/: experiences.txt
database/Test_lignedroite/: 0.sav  1.sav  2.sav  3.sav  4.sav  5.sav
database/testSegfault/: 0.sav  1.sav  2.sav  3.sav  4.sav  5.sav  6.sav  7.sav
database/test_ligne1/: 0.sav  1.sav  2.sav  3.sav  4.sav  5.sav  6.sav  7.sav  8.sav  9.sav
database/test_ligne2/: 0.sav  1.sav  10.sav  2.sav  3.sav  4.sav  5.sav  6.sav  7.sav  8.sav  9.sav
database/test_ligne3/: 0.sav  1.sav  2.sav  3.sav  4.sav  5.sav  6.sav  7.sav  8.sav  9.sav
database/test_lignedroite2/: 0.sav  1.sav  2.sav  3.sav  4.sav  5.sav
documents/: Roomba  arduino_protocole  guide_Roomba.odt
documents/TestCompas/: position test  test_compass_data.ods
include/: helloworld.h  imageStructs.h  imageUtility.h
include/controllerComputer/: client.h
include/rasp/: modes.h
include/rasp/imageProcessing/: imageStructs.h  imageStructs.h~  imageUtility.h  imageUtility.h~  saveLoad.h
include/rasp/recognition/: recognition.h
include/rasp/server/: server.h
include/serial/: Serial.h  SerialTraitment.h
src/: frameCapture.c  frameData.c  helloworld.c  imageUtility.c  inversColor.c  logs.c  logs.h  main.c
src/arduino/controlRoomba/: controlRoomba.ino
src/arduino/tess_compass/: tess_compass.ino
src/arduino/test_servo/: test_servo.ino
src/controllerComputer/: client.c  main.c
src/example/: helloworld.c
src/logs/: logs.c
src/rasp/: main.c  modes.c  tmp.c
src/rasp/imageProcessing/: imageUtility.c  imageUtility.c~  saveLoad.c
src/rasp/recognition/: recognition.c  recognition.c~
src/rasp/server/: server.c
src/serial/: Serial.c  SerialTraitment.c
tests/: Makefile  clientTest.c  comparison.c  compass_test.c  fastModif.c  serialTest.c  t_functions.c  t_functions.h  t_logs.c  t_logs.h  testCapture.c  tests.c
